--- a/03_template/assets/main/main.css
+++ b/03_template/assets/main/main.css
@@ -118,25 +118,27 @@ p+p {
     color: #9bfb95 !important;
 }
 
-.stock>*+* {
-    margin-top: 15px;
-}
-
 .stock-code {
-    font-size: 32px;
+    font-size: 1.5rem
 }
 
 .stock-price {
-    margin: 30px 0;
-    font-size: 48px;
+    margin: 20px 0;
+    font-size: 3rem;
 }
 
-.stock-trend {
-    font-size: 18px;
-}
-
+.stock-trend,
 .stock-date {
-    font-size: 18px;
+    font-size: 1rem;
+}
+
+.stock--small .stock-code {
+    font-size: 1rem;
+}
+
+.stock--small .stock-price {
+    margin: 10px 0;
+    font-size: 2rem;
 }
 
 #Mask {
@@ -246,6 +248,24 @@ p+p {
     clear: both;
 }
 
+.list-infos-more {
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.5rem;
+    color: #999;
+}
+
+.list-infos-more * {
+    display: inline-block !important;
+    margin: 0 2px;
+    vertical-align: middle;
+    text-decoration: none;
+}
+
+.list-infos-more a:hover {
+    color: black;
+}
+
 .list-info {
     display: table;
 }
@@ -304,10 +324,14 @@ p+p {
     text-align: center;
 }
 
-.list-infos--two {}
+.list-infos--two {
+    margin-left: -10px;
+    margin-right: -10px;
+}
 
 .list-infos--two>* {
     float: left;
+    margin: 0 !important;
     padding: 10px;
     width: 50%;
 }
@@ -324,19 +348,75 @@ p+p {
     overflow: hidden;
 }
 
-.list-infos--breif .list-info-media{
+.list-infos--brief .list-info-media {
     width: 80px;
 }
-.list-infos--breif .list-info-title{
-    font-size: 1.2rem;
-    line-height: 1.5rem;
+
+.list-infos--brief .list-info-title {
+    height: 34px;
+    font-size: 1rem;
+    line-height: 1.2rem;
     font-weight: bold;
 }
-.list-infos--breif .list-info-body > * + *{
+
+.list-infos--brief .list-info-body>*+* {
     margin-top: 0;
 }
 
+.list-infos--brief .list-info-auther,
+.list-infos--brief .list-info-summary {
+    display: none;
+}
+
+.article>*+* {
+    margin-top: 20px;
+}
+
+.article-title {
+    font-weight: bold;
+    font-size: 2rem;
+    line-height: 2.5rem;
+}
+
+.article-info {
+    color: #999;
+}
+
+.block {
+    display: table;
+}
+
+.block>* {
+    display: table-cell;
+    padding: 0 20px;
+}
+
+.block-side {
+    padding-left: 0;
+    width: 200px;
+}
+
+.block-side>*+* {
+    margin-top: 20px;
+}
+
+.block--border .block-side {
+    border-right: 1px solid #ccc;
+}
+
 /*END: MODULAR================================ */
+/* START: BOOTSTRAP OVERRIDE====================== */
+.list-group-item--title {
+    background-color: #f2f2f2;
+    font-weight: bold;
+}
+
+.pagination {
+    align-items: center;
+    justify-content: center;
+}
+
+/* END: BOOTSTRAP OVERRIDE====================== */
 /* PUBLIC */
 .clear:after,
 .clear:before {
@@ -515,6 +595,7 @@ header .navigation li a {
 .section-title {
     margin: 0 0 50px 0;
     font-size: 3rem;
+    font-weight: bold;
     /* text-transform: uppercase; */
 }
 
@@ -730,6 +811,35 @@ footer {
 
     .list-infos--two>* {
         width: auto;
+    }
+
+    .block>* {
+        display: block;
+        width: auto;
+    }
+
+    .block>*+* {
+        margin-top: 20px;
+    }
+
+    .block-side {
+        padding: 0;
+    }
+
+    .block-side .list-group {
+        display: block;
+        word-spacing: -5px;
+    }
+
+    .block-side .list-group-item {
+        display: inline-block;
+        padding: 0.5rem .75rem;
+        border-radius: 0;
+    }
+
+    .list-links,
+    .section-title {
+        text-align: center !important;
     }
 }
 
